[package]
name = "kls-rs"
version = "0.1.0"
authors = ["Florentin Schäfer <florentin.schaefer@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
crossbeam-channel = "0.5"
embedded-ccs811 = "0.2"
scd30 = { git = "https://github.com/LetUsFlow/scd30-rs.git", tag = "0.4.1"}
shared-bus = { version = "0.3", features = ["std"]}
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.47", default-features = false }
esp-idf-hal = { version = "0.42", default-features = false }

[build-dependencies]
embuild = "0.31"
